style bug: flex grow content is surprassing overflow limit

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -190,18 +190,26 @@ body {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+	height: 100%;
     font-weight: 200;
 	border: 1px solid green;
+
 }
 
 .growContent {
-    flex-grow: 1;
+	height: 100%;
+	flex-grow: 1;
     padding: 20px;
+	overflow: auto;
+	border: 3px solid yellow;
+
 }
 
 .overflowContent {
+	height: 100%;
 	max-height: 100%;
 	border: 1px solid blue;
+	overflow: auto;
 }
 
 /* REGISTER + LOGIN BUTTON FORM */
@@ -328,7 +336,7 @@ body {
 /* CHAT ******************************************/
 
 .convoContainer {
-	
+
 }
 
 .convo {
